Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-21168

Switching between member function declaration/definition does not work with user-defined conversion operators

    XMLWordPrintable

Details

    • d3fafcde0fd4f74112d20228ac7175a02ffcb821 (qt-creator/qt-creator/master)

    Description

      Consider the following class definition which includes a user-defined conversion operator:

      class Foo
      {
       public:
          operator std::string() const;
      };
      
      Foo::operator std::string() const {} // Should jump here
      
      

      If a user moves the cursor over std::string() and calls "Switch between member function declaration/definition", Qt Creator opens STL's definition of std::string instead of moving to the definition of operator std::string() const.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            kandeler Christian Kandeler
            rui maciel Rui Maciel
            Votes:
            1 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes