src/libs/3rdparty/cplusplus/Control.cpp
@@ -579,6 +579,15 @@ const OperatorNameId *Control::findOperatorNameId(OperatorNameId::Kind operatorI
         return &*i;
 }
 
+const ConversionNameId *Control::findConversionNameId(const FullySpecifiedType &type) const
+{
+    for (const ConversionNameId &id : d->conversionNameIds) {
+        if (type.match(id.type()))
+            return &id;
+    }
+    return nullptr;
+}
+
 const Identifier *Control::findIdentifier(const char *chars, int size) const
 { return d->identifiers.findLiteral(chars, size); }
 
